AC-9670::Adobe Commerce 2.4.7 core code is compatible with PHP 8.3

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,10 @@
         {
             "type": "vcs",
             "url": "git@github.com:magento-commerce/composer.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@github.com:glo71317/laminas-db.git"
         }
     ],
     "require": {
@@ -53,6 +57,7 @@
         "laminas/laminas-code": "^4.13",
         "laminas/laminas-di": "^3.13",
         "laminas/laminas-file": "^2.13",
+        "laminas/laminas-db": "dev-php8.3_support",
         "laminas/laminas-oauth": "^2.6",
         "laminas/laminas-escaper": "^2.13",
         "laminas/laminas-eventmanager": "^3.11",
