--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
         "colinmollenhour/credis": "^1.13",
         "colinmollenhour/php-redis-session-abstract": "^1.5",
         "composer/composer": "^2.0, !=2.2.16",
-        "elasticsearch/elasticsearch": "~7.17.0 || ~8.5.0",
+        "elasticsearch/elasticsearch": "^7.0",
         "ezyang/htmlpurifier": "^4.16",
         "guzzlehttp/guzzle": "^7.5",
         "laminas/laminas-captcha": "^2.12",
@@ -82,7 +82,7 @@
         "monolog/monolog": "^2.7",
         "opensearch-project/opensearch-php": "^1.0 || ^2.0, <2.0.1",
         "pelago/emogrifier": "^7.0",
-        "php-amqplib/php-amqplib": "^3.2",
+        "php-amqplib/php-amqplib": "^3.2, <3.6",
         "phpseclib/mcrypt_compat": "^2.0",
         "phpseclib/phpseclib": "^3.0",
         "ramsey/uuid": "^4.2",
