--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,7 @@
         "laminas/laminas-modulemanager": "^2.11",
         "laminas/laminas-mvc": "^3.6",
         "laminas/laminas-permissions-acl": "^2.10",
+        "laminas/laminas-server": "^2.16",
         "laminas/laminas-servicemanager": "^3.16",
         "laminas/laminas-soap": "^2.10",
         "laminas/laminas-stdlib": "^3.11",
@@ -85,7 +86,7 @@
         "magento/zend-pdf": "^1.16",
         "monolog/monolog": "^2.7",
         "opensearch-project/opensearch-php": "^1.0 || ^2.0, <2.0.1",
-        "pelago/emogrifier": "dev-main",
+        "pelago/emogrifier": "^7.0",
         "php-amqplib/php-amqplib": "^3.2, <3.6",
         "phpseclib/mcrypt_compat": "^2.0",
         "phpseclib/phpseclib": "^3.0",
