--- a/composer.json
+++ b/composer.json
@@ -46,8 +46,8 @@
         "ext-zip": "*",
         "lib-libxml": "*",
         "colinmollenhour/cache-backend-file": "^1.4",
-        "colinmollenhour/cache-backend-redis": "^1.14",
-        "colinmollenhour/credis": "^1.13",
+        "colinmollenhour/cache-backend-redis": "~1.16.0",
+        "colinmollenhour/credis": "~1.15.0",
         "colinmollenhour/php-redis-session-abstract": "^1.5",
         "composer/composer": "^2.0, !=2.2.16",
         "elasticsearch/elasticsearch": "~7.17.0 || ~8.5.0",
