ACP2E-2519: The coupon code count does not update in the Time Used column in the Manage Coupon Codes tab if an order is placed with multi-shipping.

--- a/app/code/Magento/SalesRule/composer.json
+++ b/app/code/Magento/SalesRule/composer.json
@@ -30,7 +30,8 @@
         "magento/module-asynchronous-operations": "*"
     },
     "suggest": {
-        "magento/module-sales-rule-sample-data": "*"
+        "magento/module-sales-rule-sample-data": "*",
+        "magento/module-multishipping": "*"
     },
     "type": "magento2-module",
     "license": [
