--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,6 @@
         {
             "type": "vcs",
             "url": "git@github.com:magento-gl/magento2-functional-testing-framework.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:magento-gl/composer.git"
         }
     ],
     "require": {
@@ -77,7 +73,7 @@
         "laminas/laminas-validator": "^2.23",
         "league/flysystem": "^2.4",
         "league/flysystem-aws-s3-v3": "^2.4",
-        "magento/composer": "dev-AC-9499",
+        "magento/composer": "dev-develop",
         "magento/composer-dependency-version-audit-plugin": "^0.1",
         "magento/magento-composer-installer": ">=0.4.0",
         "magento/zend-cache": "^1.16",
