--- a/composer.json
+++ b/composer.json
@@ -65,8 +65,8 @@
         "laminas/laminas-stdlib": "^3.11",
         "laminas/laminas-uri": "^2.9",
         "laminas/laminas-validator": "^2.23",
-        "league/flysystem": "^2.4",
-        "league/flysystem-aws-s3-v3": "^2.4",
+        "league/flysystem": "^3.0",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "magento/composer": "^1.9.0",
         "magento/composer-dependency-version-audit-plugin": "^0.1",
         "magento/magento-composer-installer": ">=0.4.0",
@@ -76,7 +76,7 @@
         "monolog/monolog": "^2.7",
         "opensearch-project/opensearch-php": "^1.0 || ^2.0, <2.0.1",
         "pelago/emogrifier": "^7.0",
-        "php-amqplib/php-amqplib": "^3.2",
+        "php-amqplib/php-amqplib": "^3.2, <3.6",
         "phpseclib/mcrypt_compat": "^2.0",
         "phpseclib/phpseclib": "^3.0",
         "ramsey/uuid": "^4.2",
