--- a/composer.json
+++ b/composer.json
@@ -83,8 +83,8 @@
         "ramsey/uuid": "^4.2",
         "symfony/console": "^5.4",
         "symfony/intl": "^5.4",
-        "symfony/process": "<=5.4.23",
-        "symfony/string": "^5.4",
+        "symfony/process": "^6.4",
+        "symfony/string": "^6.4",
         "tedivm/jshrink": "^1.4",
         "tubalmartin/cssmin": "^4.1",
         "web-token/jwt-framework": "^3.1",
@@ -103,7 +103,7 @@
         "phpmd/phpmd": "^2.12",
         "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^10.5",
-        "symfony/finder": "^5.4"
+        "symfony/finder": "^6.4"
     },
     "repositories": [
         {
