ACP2E-2615: Bundle products added via the Page Builder > Products widget break the cart - added soft dependency

--- a/app/code/Magento/Bundle/composer.json
+++ b/app/code/Magento/Bundle/composer.json
@@ -27,7 +27,8 @@
     "suggest": {
         "magento/module-webapi": "*",
         "magento/module-bundle-sample-data": "*",
-        "magento/module-sales-rule": "*"
+        "magento/module-sales-rule": "*",
+        "magento/module-catalog-widget": "*"
     },
     "type": "magento2-module",
     "license": [
