--- a/composer.json
+++ b/composer.json
@@ -87,7 +87,7 @@
         "symfony/string": "^6.4",
         "tedivm/jshrink": "^1.4",
         "tubalmartin/cssmin": "^4.1",
-        "web-token/jwt-framework": "^3.1, <3.2.9",
+        "web-token/jwt-framework": "^3.1",
         "webonyx/graphql-php": "^15.0",
         "wikimedia/less.php": "^3.2"
     },
