AC-10874::Use public fork for laminas-db support PHP 8.3

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,12 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:magento/magento-zf-db.git"
+        }
+    ],
     "require": {
         "php": "~8.1.0||~8.2.0||~8.3.0",
         "ext-bcmath": "*",
@@ -47,7 +53,7 @@
         "laminas/laminas-code": "^4.13",
         "laminas/laminas-di": "^3.13",
         "laminas/laminas-file": "^2.13",
-        "laminas/laminas-db": "^2.15",
+        "magento/magento-zf-db": "2.19.x-dev",
         "laminas/laminas-oauth": "^2.6",
         "laminas/laminas-escaper": "^2.13",
         "laminas/laminas-eventmanager": "^3.11",
