--- a/app/code/Magento/Captcha/composer.json
+++ b/app/code/Magento/Captcha/composer.json
@@ -4,12 +4,6 @@
     "config": {
         "sort-packages": true
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "git@github.com:magento/magento-zf-db.git"
-        }
-    ],
     "require": {
         "php": "~8.1.0||~8.2.0||~8.3.0",
         "magento/framework": "*",
@@ -20,7 +14,7 @@
         "magento/module-store": "*",
         "magento/module-authorization": "*",
         "laminas/laminas-captcha": "^2.12",
-        "magento/magento-zf-db": "2.19.x-dev"
+        "laminas/laminas-db": "2.19.x-dev"
     },
     "type": "magento2-module",
     "license": [
