--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "laminas/laminas-code": "^4.13",
         "laminas/laminas-di": "^3.13",
         "laminas/laminas-file": "^2.13",
-        "laminas/laminas-db": "^2.19.x-dev",
+        "laminas/laminas-db": "^2.19",
         "laminas/laminas-oauth": "^2.6",
         "laminas/laminas-escaper": "^2.13",
         "laminas/laminas-eventmanager": "^3.11",
