Remove now-unused third party dependency

--- a/app/code/Magento/Backend/composer.json
+++ b/app/code/Magento/Backend/composer.json
@@ -23,8 +23,7 @@
         "magento/module-store": "*",
         "magento/module-translation": "*",
         "magento/module-ui": "*",
-        "magento/module-user": "*",
-        "s1lentium/iptools": "^1.1"
+        "magento/module-user": "*"
     },
     "suggest": {
         "magento/module-theme": "*"
