--- a/app/code/Magento/Csp/composer.json
+++ b/app/code/Magento/Csp/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": "~8.1.0||~8.2.0||~8.3.0",
         "magento/framework": "*",
-        "magento/module-store": "*"
+        "magento/module-store": "*",
+        "magento/module-require-js": "*"
     },
     "type": "magento2-module",
     "license": [
