integration test fixes

--- a/dev/tests/integration/phpunit.xml.dist
+++ b/dev/tests/integration/phpunit.xml.dist
@@ -89,6 +89,8 @@
             <!-- Path to config file (default is config/allure.config.php) -->
             <parameter name="config" value="allure/allure.config.php" />
         </bootstrap>
+        <bootstrap class="Magento\TestFramework\Event\TestSuitStarted" />
         <bootstrap class="Magento\TestFramework\Event\PhpUnitExtension" />
+        <bootstrap class="Magento\TestFramework\Event\PhpUnitExtensionFinished" />
     </extensions>
 </phpunit>
