AC-10565,AC-10566::CNS WebAPI Broken and Failed tests for 2.4.7-beta3-develop for OpenSearch, CNS WebAPI Broken and Failed tests for 2.4.7-beta3-develop for S3

--- a/app/code/Magento/CatalogImportExport/composer.json
+++ b/app/code/Magento/CatalogImportExport/composer.json
@@ -17,7 +17,8 @@
         "magento/module-media-storage": "*",
         "magento/module-store": "*",
         "magento/module-tax": "*",
-        "magento/module-authorization": "*"
+        "magento/module-authorization": "*",
+        "magento/module-aws-s3": "*"
     },
     "type": "magento2-module",
     "license": [
