--- a/dev/tests/api-functional/phpunit_rest.xml.dist
+++ b/dev/tests/api-functional/phpunit_rest.xml.dist
@@ -34,13 +34,13 @@
 		<!-- WebSerivice Type -->
 		<const name="TESTS_WEB_API_ADAPTER" value="rest"/>
 		<!-- Webserver URL -->
-		<const name="TESTS_BASE_URL" value="http://magento.url"/>
+		<const name="TESTS_BASE_URL" value="http://mag2ce.loc"/>
 		<!-- Webserver API user -->
 		<const name="TESTS_WEBSERVICE_USER" value="admin"/>
 		<!-- Webserver API key -->
-		<const name="TESTS_WEBSERVICE_APIKEY" value="123123q"/>
+		<const name="TESTS_WEBSERVICE_APIKEY" value="admin123"/>
 		<!-- Define if debugger should be started using XDEBUG_SESSION cookie -->
-		<const name="TESTS_XDEBUG_ENABLED" value="false"/>
+		<const name="TESTS_XDEBUG_ENABLED" value="true"/>
 		<!-- Define XDEBUG_SESSION cookie value-->
 		<const name="TESTS_XDEBUG_SESSION" value="phpstorm"/>
 		<!--Generate documentation from REST tests and put it into var/log/rest-documentation directory-->
@@ -62,5 +62,6 @@
             <!-- Path to config file (default is config/allure.config.php) -->
             <parameter name="config" value="allure/allure.config.php" />
         </bootstrap>
+        <bootstrap class="Magento\TestFramework\Event\PhpUnitExtension"/>
 	</extensions>
 </phpunit>
