--- a/app/code/Magento/Csp/composer.json
+++ b/app/code/Magento/Csp/composer.json
@@ -8,7 +8,8 @@
         "php": "~8.1.0||~8.2.0||~8.3.0",
         "magento/framework": "*",
         "magento/module-store": "*",
-        "magento/module-require-js": "*"
+        "magento/module-require-js": "*",
+        "magento/module-deploy": "*"
     },
     "type": "magento2-module",
     "license": [
