--- a/composer.json
+++ b/composer.json
@@ -206,6 +206,7 @@
         "magento/module-indexer": "*",
         "magento/module-instant-purchase": "*",
         "magento/module-integration": "*",
+        "magento/module-integration-graph-ql": "*",
         "magento/module-layered-navigation": "*",
         "magento/module-login-as-customer": "*",
         "magento/module-login-as-customer-admin-ui": "*",
