AC-11385::Investigate phpstan/phpstan latest versions

--- a/composer.json
+++ b/composer.json
@@ -101,7 +101,7 @@
         "magento/magento2-functional-testing-framework": "^4.7",
         "pdepend/pdepend": "^2.10",
         "phpmd/phpmd": "^2.12",
-        "phpstan/phpstan": "^1.9, <1.10.29",
+        "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^9.5",
         "sebastian/phpcpd": "^6.0",
         "symfony/finder": "^6.4"
