Deleted redundant dependency

--- a/app/code/Magento/IntegrationGraphQl/composer.json
+++ b/app/code/Magento/IntegrationGraphQl/composer.json
@@ -4,8 +4,7 @@
     "type": "magento2-module",
     "require": {
         "php": "~8.1.0||~8.2.0||~8.3.0",
-        "magento/framework": "*",
-        "magento/module-integration": "*"
+        "magento/framework": "*"
     },
     "license": [
         "OSL-3.0",
