--- a/app/code/Magento/Paypal/composer.json
+++ b/app/code/Magento/Paypal/composer.json
@@ -24,8 +24,7 @@
         "magento/module-tax": "*",
         "magento/module-theme": "*",
         "magento/module-ui": "*",
-        "magento/module-vault": "*",
-        "magento/module-csp": "*",
+        "magento/module-vault": "*"
     },
     "suggest": {
         "magento/module-checkout-agreements": "*"
