--- a/app/code/Magento/Paypal/composer.json
+++ b/app/code/Magento/Paypal/composer.json
@@ -25,7 +25,7 @@
         "magento/module-theme": "*",
         "magento/module-ui": "*",
         "magento/module-vault": "*",
-        "magento/module-csp": "*",
+        "magento/module-csp": "*"
     },
     "suggest": {
         "magento/module-checkout-agreements": "*"
