--- a/dev/tests/api-functional/phpunit_graphql.xml.dist
+++ b/dev/tests/api-functional/phpunit_graphql.xml.dist
@@ -58,5 +58,6 @@
             <!-- Path to config file (default is config/allure.config.php) -->
             <parameter name="config" value="allure/allure.config.php" />
         </bootstrap>
+        <bootstrap class="Magento\TestFramework\Event\PhpUnitExtension"/>
     </extensions>
 </phpunit>
