--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "require": {
+    "require": {"monolog/monolog": "2.0.*"
+    }
         "php": "~8.1.0||~8.2.0||~8.3.0",
         "ext-bcmath": "*",
         "ext-ctype": "*",
