--- a/app/code/Magento/GraphQlResolverCache/composer.json
+++ b/app/code/Magento/GraphQlResolverCache/composer.json
@@ -6,10 +6,7 @@
         "php": "~8.1.0||~8.2.0||~8.3.0",
         "magento/framework": "*",
         "magento/module-graph-ql": "*",
-        "magento/module-cms": "*",
-        "magento/module-catalog": "*",
-        "magento/module-catalog-rule": "*",
-        "magento/module-sales-rule": "*"
+        "magento/module-cms": "*"
     },
     "license": [
         "OSL-3.0",
