--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,9 @@
 {
-    "name": "magento/magento2ce",
-    "description": "Magento 2 (Open Source)",
+    "name": "magento/magento2ee",
+    "description": "Magento 2 (Enterprise Edition)",
     "type": "project",
     "license": [
-        "OSL-3.0",
-        "AFL-3.0"
+        "proprietary"
     ],
     "config": {
         "allow-plugins": {
@@ -32,6 +31,7 @@
         "ext-simplexml": "*",
         "ext-soap": "*",
         "ext-sodium": "*",
+        "ext-spl": "*",
         "ext-xsl": "*",
         "ext-zip": "*",
         "lib-libxml": "*",
@@ -89,62 +89,118 @@
         "tubalmartin/cssmin": "^4.1",
         "web-token/jwt-framework": "^3.1",
         "webonyx/graphql-php": "^15.0",
-        "wikimedia/less.php": "^3.2"
+        "wikimedia/less.php": "^3.2",
+        "guzzlehttp/oauth-subscriber": "^0.6"
     },
     "require-dev": {
         "allure-framework/allure-phpunit": "^2",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.7 || ^1.0",
+        "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
         "dg/bypass-finals": "^1.4",
         "friendsofphp/php-cs-fixer": "^3.22",
         "lusitanian/oauth": "^0.8",
         "magento/magento-coding-standard": "*",
         "magento/magento2-functional-testing-framework": "^4.7",
-        "pdepend/pdepend": "^2.10",
-        "phpmd/phpmd": "^2.12",
+        "pdepend/pdepend": "^2.12",
+        "phpmd/phpmd": "^2.13",
         "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^9.5",
         "sebastian/phpcpd": "^6.0",
-        "symfony/finder": "^6.4"
+        "squizlabs/php_codesniffer": "^3.6",
+        "symfony/finder": "^6.4",
+        "yireo/magento2-whoops": "^0.2.0"
     },
     "suggest": {
-        "ext-pcntl": "Need for run processes in parallel mode"
+        "ext-pcntl": "Need for run processes in parallel mode",
+        "ext-swoole": "Need for Application Server",
+        "ext-openswoole": "Need for Application Server"
     },
     "replace": {
-        "magento/module-marketplace": "*",
+        "components/jquery": "1.11.0",
+        "components/jqueryui": "1.10.4",
+        "magento/framework": "*",
+        "magento/framework-amqp": "*",
+        "magento/framework-bulk": "*",
+        "magento/framework-foreign-key": "*",
+        "magento/framework-message-queue": "*",
+        "magento/language-de_de": "*",
+        "magento/language-en_us": "*",
+        "magento/language-es_es": "*",
+        "magento/language-fr_fr": "*",
+        "magento/language-nl_nl": "*",
+        "magento/language-pt_br": "*",
+        "magento/language-zh_hans_cn": "*",
+        "magento/module-admin-gws": "*",
+        "magento/module-admin-gws-configurable-product": "*",
+        "magento/module-admin-gws-staging": "*",
+        "magento/module-webapi-rest-gws": "*",
         "magento/module-admin-analytics": "*",
         "magento/module-admin-notification": "*",
+        "magento/module-adobe-ims": "*",
+        "magento/module-adobe-ims-api": "*",
+        "magento/module-advanced-catalog": "*",
+        "magento/module-advanced-checkout": "*",
         "magento/module-advanced-pricing-import-export": "*",
+        "magento/module-advanced-rule": "*",
+        "magento/module-advanced-sales-rule": "*",
         "magento/module-advanced-search": "*",
         "magento/module-amqp": "*",
         "magento/module-analytics": "*",
         "magento/module-application-performance-monitor": "*",
         "magento/module-application-performance-monitor-new-relic": "*",
+        "magento/module-application-server": "*",
+        "magento/module-application-server-new-relic": "*",
+        "magento/module-application-server-performance-monitor": "*",
+        "magento/module-application-server-state-monitor": "*",
+        "magento/module-application-server-state-monitor-graph-ql": "*",
         "magento/module-asynchronous-operations": "*",
+        "magento/module-async-order": "*",
         "magento/module-authorization": "*",
         "magento/module-backend": "*",
         "magento/module-backup": "*",
+        "magento/module-banner": "*",
+        "magento/module-banner-customer-segment": "*",
+        "magento/module-banner-graph-ql": "*",
+        "magento/module-banner-staging": "*",
         "magento/module-bundle": "*",
         "magento/module-bundle-graph-ql": "*",
         "magento/module-bundle-import-export": "*",
+        "magento/module-bundle-import-export-staging": "*",
+        "magento/module-bundle-staging": "*",
         "magento/module-cache-invalidate": "*",
         "magento/module-captcha": "*",
         "magento/module-cardinal-commerce": "*",
         "magento/module-catalog": "*",
         "magento/module-catalog-customer-graph-ql": "*",
         "magento/module-catalog-analytics": "*",
+        "magento/module-catalog-event": "*",
         "magento/module-catalog-import-export": "*",
+        "magento/module-catalog-import-export-staging": "*",
         "magento/module-catalog-inventory": "*",
         "magento/module-catalog-inventory-graph-ql": "*",
+        "magento/module-catalog-inventory-staging": "*",
+        "magento/module-catalog-permissions": "*",
+        "magento/module-catalog-permissions-graph-ql": "*",
+        "magento/module-elasticsearch-catalog-permissions": "*",
+        "magento/module-elasticsearch-catalog-permissions-graph-ql": "*",
         "magento/module-catalog-rule": "*",
         "magento/module-catalog-rule-graph-ql": "*",
         "magento/module-catalog-rule-configurable": "*",
+        "magento/module-catalog-rule-staging": "*",
         "magento/module-catalog-search": "*",
+        "magento/module-catalog-staging": "*",
+        "magento/module-catalog-staging-graph-ql": "*",
         "magento/module-catalog-url-rewrite": "*",
+        "magento/module-catalog-url-rewrite-staging": "*",
         "magento/module-catalog-widget": "*",
         "magento/module-checkout": "*",
         "magento/module-checkout-agreements": "*",
         "magento/module-checkout-agreements-graph-ql": "*",
+        "magento/module-checkout-staging": "*",
+        "magento/module-checkout-address-search": "*",
+        "magento/module-checkout-address-search-gift-registry": "*",
         "magento/module-cms": "*",
+        "magento/module-cms-graph-ql": "*",
+        "magento/module-cms-staging": "*",
         "magento/module-cms-url-rewrite": "*",
         "magento/module-compare-list-graph-ql": "*",
         "magento/module-config": "*",
@@ -152,15 +208,24 @@
         "magento/module-configurable-import-export": "*",
         "magento/module-configurable-product": "*",
         "magento/module-configurable-product-sales": "*",
+        "magento/module-configurable-product-staging": "*",
         "magento/module-contact": "*",
         "magento/module-contact-graph-ql": "*",
         "magento/module-cookie": "*",
         "magento/module-cron": "*",
         "magento/module-currency-symbol": "*",
+        "magento/module-custom-attribute-management": "*",
         "magento/module-customer": "*",
         "magento/module-customer-analytics": "*",
+        "magento/module-customer-balance": "*",
+        "magento/module-customer-balance-graph-ql": "*",
+        "magento/module-customer-custom-attributes": "*",
+        "magento/module-customer-custom-attributes-graph-ql": "*",
         "magento/module-customer-downloadable-graph-ql": "*",
+        "magento/module-customer-finance": "*",
         "magento/module-customer-import-export": "*",
+        "magento/module-customer-segment": "*",
+        "magento/module-customer-segment-graph-ql": "*",
         "magento/module-deploy": "*",
         "magento/module-developer": "*",
         "magento/module-dhl": "*",
@@ -169,19 +234,33 @@
         "magento/module-downloadable": "*",
         "magento/module-downloadable-graph-ql": "*",
         "magento/module-downloadable-import-export": "*",
+        "magento/module-downloadable-staging": "*",
         "magento/module-eav": "*",
         "magento/module-open-search": "*",
         "magento/module-elasticsearch": "*",
         "magento/module-elasticsearch-7": "*",
         "magento/module-email": "*",
         "magento/module-encryption-key": "*",
+        "magento/module-enterprise": "*",
         "magento/module-fedex": "*",
+        "magento/module-gift-card": "*",
+        "magento/module-gift-card-account": "*",
+        "magento/module-gift-card-graph-ql": "*",
+        "magento/module-gift-card-account-graph-ql": "*",
+        "magento/module-gift-card-import-export": "*",
+        "magento/module-gift-card-staging": "*",
         "magento/module-gift-message": "*",
         "magento/module-gift-message-graph-ql": "*",
+        "magento/module-gift-message-staging": "*",
+        "magento/module-gift-registry": "*",
+        "magento/module-gift-registry-graph-ql": "*",
+        "magento/module-gift-wrapping": "*",
+        "magento/module-gift-wrapping-graph-ql": "*",
+        "magento/module-gift-wrapping-staging": "*",
         "magento/module-google-adwords": "*",
         "magento/module-google-analytics": "*",
-        "magento/module-google-optimizer": "*",
         "magento/module-google-gtag": "*",
+        "magento/module-google-optimizer": "*",
         "magento/module-graph-ql": "*",
         "magento/module-graph-ql-cache": "*",
         "magento/module-graph-ql-new-relic": "*",
@@ -192,36 +271,51 @@
         "magento/module-configurable-product-graph-ql": "*",
         "magento/module-customer-graph-ql": "*",
         "magento/module-eav-graph-ql": "*",
+        "magento/module-reward-graph-ql": "*",
+        "magento/module-rma-graph-ql": "*",
         "magento/module-swatches-graph-ql": "*",
         "magento/module-tax-graph-ql": "*",
         "magento/module-url-rewrite-graph-ql": "*",
         "magento/module-cms-url-rewrite-graph-ql": "*",
         "magento/module-weee-graph-ql": "*",
-        "magento/module-cms-graph-ql": "*",
+        "magento/module-google-optimizer-staging": "*",
+        "magento/module-google-tag-manager": "*",
         "magento/module-grouped-import-export": "*",
-        "magento/module-grouped-product": "*",
         "magento/module-grouped-catalog-inventory": "*",
+        "magento/module-grouped-product": "*",
         "magento/module-grouped-product-graph-ql": "*",
+        "magento/module-grouped-product-staging": "*",
         "magento/module-import-export": "*",
+        "magento/module-import-csv": "*",
+        "magento/module-import-csv-api": "*",
+        "magento/module-import-json": "*",
+        "magento/module-import-json-api": "*",
         "magento/module-indexer": "*",
         "magento/module-instant-purchase": "*",
         "magento/module-integration": "*",
         "magento/module-integration-graph-ql": "*",
+        "magento/module-invitation": "*",
         "magento/module-layered-navigation": "*",
+        "magento/module-layered-navigation-staging": "*",
+        "magento/module-logging": "*",
         "magento/module-login-as-customer": "*",
         "magento/module-login-as-customer-admin-ui": "*",
         "magento/module-login-as-customer-api": "*",
-        "magento/module-login-as-customer-assistance": "*",
+        "magento/module-login-as-customer-assistance":  "*",
         "magento/module-login-as-customer-frontend-ui": "*",
         "magento/module-login-as-customer-graph-ql": "*",
         "magento/module-login-as-customer-log": "*",
+        "magento/module-login-as-customer-logging": "*",
         "magento/module-login-as-customer-quote": "*",
         "magento/module-login-as-customer-page-cache": "*",
         "magento/module-login-as-customer-sales": "*",
+        "magento/module-login-as-customer-website-restriction": "*",
+        "magento/module-marketplace": "*",
         "magento/module-media-content": "*",
         "magento/module-media-content-api": "*",
         "magento/module-media-content-catalog": "*",
         "magento/module-media-content-cms": "*",
+        "magento/module-media-content-catalog-staging": "*",
         "magento/module-media-gallery": "*",
         "magento/module-media-gallery-api": "*",
         "magento/module-media-gallery-ui": "*",
@@ -247,6 +341,12 @@
         "magento/module-msrp": "*",
         "magento/module-msrp-configurable-product": "*",
         "magento/module-msrp-grouped-product": "*",
+        "magento/module-msrp-staging": "*",
+        "magento/module-multicoupon": "*",
+        "magento/module-multicoupon-graph-ql": "*",
+        "magento/module-multicoupon-ui": "*",
+        "magento/module-multiple-wishlist": "*",
+        "magento/module-multiple-wishlist-graph-ql": "*",
         "magento/module-multishipping": "*",
         "magento/module-mysql-mq": "*",
         "magento/module-new-relic-reporting": "*",
@@ -260,49 +360,73 @@
         "magento/module-page-cache": "*",
         "magento/module-payment": "*",
         "magento/module-payment-graph-ql": "*",
+        "magento/module-payment-staging": "*",
         "magento/module-paypal": "*",
         "magento/module-paypal-captcha": "*",
         "magento/module-paypal-graph-ql": "*",
         "magento/module-persistent": "*",
+        "magento/module-persistent-history": "*",
+        "magento/module-price-permissions": "*",
         "magento/module-product-alert": "*",
         "magento/module-product-video": "*",
+        "magento/module-product-video-staging": "*",
+        "magento/module-promotion-permissions": "*",
         "magento/module-quote": "*",
         "magento/module-quote-analytics": "*",
+        "magento/module-quote-gift-card-options": "*",
+        "magento/module-quote-graph-ql": "*",
         "magento/module-quote-bundle-options": "*",
         "magento/module-quote-configurable-options": "*",
         "magento/module-quote-downloadable-links": "*",
-        "magento/module-quote-graph-ql": "*",
         "magento/module-related-product-graph-ql": "*",
         "magento/module-release-notification": "*",
+        "magento/module-reminder": "*",
         "magento/module-reports": "*",
         "magento/module-require-js": "*",
+        "magento/module-resource-connections": "*",
         "magento/module-review": "*",
         "magento/module-review-graph-ql": "*",
         "magento/module-review-analytics": "*",
+        "magento/module-review-staging": "*",
+        "magento/module-reward": "*",
+        "magento/module-reward-staging": "*",
+        "magento/module-rma": "*",
+        "magento/module-rma-staging": "*",
         "magento/module-robots": "*",
         "magento/module-rss": "*",
         "magento/module-rule": "*",
         "magento/module-sales": "*",
         "magento/module-sales-analytics": "*",
+        "magento/module-sales-archive": "*",
         "magento/module-sales-graph-ql": "*",
         "magento/module-sales-inventory": "*",
         "magento/module-sales-rule": "*",
         "magento/module-sales-rule-graph-ql": "*",
+        "magento/module-sales-rule-staging": "*",
         "magento/module-sales-sequence": "*",
         "magento/module-sample-data": "*",
+        "magento/module-scalable-checkout": "*",
+        "magento/module-scalable-inventory": "*",
+        "magento/module-scalable-oms": "*",
+        "magento/module-scheduled-import-export": "*",
         "magento/module-search": "*",
+        "magento/module-search-staging": "*",
         "magento/module-security": "*",
         "magento/module-send-friend": "*",
         "magento/module-send-friend-graph-ql": "*",
         "magento/module-shipping": "*",
         "magento/module-sitemap": "*",
+        "magento/module-staging": "*",
+        "magento/module-staging-graph-ql": "*",
         "magento/module-store": "*",
         "magento/module-store-graph-ql": "*",
+        "magento/module-support": "*",
         "magento/module-swagger": "*",
-        "magento/module-swagger-webapi": "*",
-        "magento/module-swagger-webapi-async": "*",
+        "magento/module-swat": "*",
         "magento/module-swatches": "*",
         "magento/module-swatches-layered-navigation": "*",
+        "magento/module-target-rule": "*",
+        "magento/module-target-rule-graph-ql": "*",
         "magento/module-tax": "*",
         "magento/module-tax-import-export": "*",
         "magento/module-theme": "*",
@@ -317,38 +441,46 @@
         "magento/module-vault": "*",
         "magento/module-vault-graph-ql": "*",
         "magento/module-version": "*",
+        "magento/module-versions-cms": "*",
+        "magento/module-versions-cms-page-cache": "*",
+        "magento/module-versions-cms-url-rewrite": "*",
+        "magento/module-versions-cms-url-rewrite-graph-ql": "*",
+        "magento/module-visual-merchandiser": "*",
         "magento/module-webapi": "*",
         "magento/module-webapi-async": "*",
+        "magento/module-swagger-webapi": "*",
+        "magento/module-swagger-webapi-async": "*",
         "magento/module-webapi-security": "*",
+        "magento/module-website-restriction": "*",
         "magento/module-weee": "*",
+        "magento/module-weee-staging": "*",
         "magento/module-widget": "*",
         "magento/module-wishlist": "*",
-        "magento/module-wishlist-graph-ql": "*",
         "magento/module-wishlist-analytics": "*",
+        "magento/module-wishlist-gift-card": "*",
+        "magento/module-wishlist-gift-card-graph-ql": "*",
+        "magento/module-wishlist-graph-ql": "*",
         "magento/theme-adminhtml-backend": "*",
+        "magento/theme-adminhtml-spectrum": "*",
         "magento/theme-frontend-blank": "*",
         "magento/theme-frontend-luma": "*",
-        "magento/language-de_de": "*",
-        "magento/language-en_us": "*",
-        "magento/language-es_es": "*",
-        "magento/language-fr_fr": "*",
-        "magento/language-nl_nl": "*",
-        "magento/language-pt_br": "*",
-        "magento/language-zh_hans_cn": "*",
-        "magento/framework": "*",
-        "magento/framework-amqp": "*",
-        "magento/framework-bulk": "*",
-        "magento/framework-message-queue": "*",
-        "trentrichardson/jquery-timepicker-addon": "1.4.3",
-        "components/jquery": "1.11.0",
-        "components/jqueryui": "1.10.4",
-        "twbs/bootstrap": "3.1.0",
         "tinymce/tinymce": "3.4.7",
+        "trentrichardson/jquery-timepicker-addon": "1.4.3",
+        "twbs/bootstrap": "3.1.0",
         "magento/module-csp": "*",
         "magento/module-aws-s3": "*",
+        "magento/module-aws-s3-customer-custom-attributes": "*",
+        "magento/module-aws-s3-gift-card-import-export": "*",
+        "magento/module-aws-s3-scheduled-import-export": "*",
         "magento/module-remote-storage": "*",
+        "magento/module-remote-storage-commerce": "*",
         "magento/module-jwt-framework-adapter": "*",
-        "magento/module-jwt-user-token": "*"
+        "magento/module-jwt-user-token": "*",
+        "magento/module-quote-staging": "*",
+        "magento/module-async-order-graph-ql": "*",
+        "magento/module-deferred-total-calculating": "*",
+        "magento/module-admin-adobe-ims": "*",
+        "magento/module-quote-commerce-graph-ql": "*"
     },
     "conflict": {
         "gene/bluefoot": "*"
