ACP2E-2969: REST API unable to make requests with slash (/) in SKU when using Oauth1 - overridden laminas sign method

--- a/composer.json
+++ b/composer.json
@@ -89,8 +89,7 @@
         "tubalmartin/cssmin": "^4.1",
         "web-token/jwt-framework": "^3.1",
         "webonyx/graphql-php": "^15.0",
-        "wikimedia/less.php": "^3.2",
-        "guzzlehttp/oauth-subscriber": "^0.6"
+        "wikimedia/less.php": "^3.2"
     },
     "require-dev": {
         "allure-framework/allure-phpunit": "^2",
