--- a/composer.json
+++ b/composer.json
@@ -99,19 +99,13 @@
         "friendsofphp/php-cs-fixer": "^3.22",
         "lusitanian/oauth": "^0.8",
         "magento/magento-coding-standard": "*",
-        "magento/magento2-functional-testing-framework": "dev-ACQE-5710_ver1",
+        "magento/magento2-functional-testing-framework": "^4.8",
         "pdepend/pdepend": "^2.10",
         "phpmd/phpmd": "^2.12",
         "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^10.5",
         "symfony/finder": "^6.4"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "git@github.com:magento-gl/magento2-functional-testing-framework.git"
-        }
-    ],
     "suggest": {
         "ext-pcntl": "Need for run processes in parallel mode"
     },
