--- a/app/code/Magento/GraphQlResolverCache/composer.json
+++ b/app/code/Magento/GraphQlResolverCache/composer.json
@@ -5,8 +5,7 @@
     "require": {
         "php": "~8.1.0||~8.2.0||~8.3.0",
         "magento/framework": "*",
-        "magento/module-graph-ql": "*",
-        "magento/module-cms": "*"
+        "magento/module-graph-ql": "*"
     },
     "license": [
         "OSL-3.0",
